<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/searchFragment">

    <fragment
        android:id="@+id/aboutFragment"
        android:name="ru.practicum.android.diploma.about.ui.AboutFragment"
        tools:layout="@layout/fragment_about"
        android:label="@string/team" />

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="ru.practicum.android.diploma.favorites.ui.view.FavoritesFragment"
        tools:layout="@layout/fragment_favorites"
        android:label="@string/favorites" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="ru.practicum.android.diploma.search.ui.SearchFragment"
        tools:layout="@layout/fragment_search"
        android:label="@string/search" >

        <action
            android:id="@+id/action_searchFragment_to_vacancyFragment"
            app:destination="@+id/vacancyFragment"/>

    </fragment>

    <fragment
        android:id="@+id/vacancyFragment"
        android:name="ru.practicum.android.diploma.vacancy.ui.view.VacancyFragment"
        tools:layout="@layout/fragment_vacancy"
        android:label="VacancyFragment" />
</navigation>
