<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_16dp"
    tools:context="ru.practicum.android.diploma.search.ui.filters.FilterSettingsFragment">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@color/background_reverse"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_arrow_back_24px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/text_22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:text="@string/settings_filter"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="@id/btnBack" />


    <TextView
        android:id="@+id/placeWorkEmpty"
        style="@style/text_16_hint"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_60dp"
        android:gravity="center_vertical"
        android:text="@string/place_of_work"
        app:layout_constraintBottom_toBottomOf="@id/btnArrowForwardPlace"
        app:layout_constraintEnd_toStartOf="@+id/btnArrowForwardPlace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnArrowForwardPlace" />

    <FrameLayout
        android:id="@+id/placeWorkFilled"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_60dp"
        android:paddingVertical="@dimen/dm_12dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btnArrowForwardPlace"
        app:layout_constraintEnd_toStartOf="@id/btnArrowForwardPlace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnArrowForwardPlace">

        <TextView
            android:id="@+id/hintPlaceWork"
            style="@style/text_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_of_work" />

        <TextView
            android:id="@+id/placeWork"
            style="@style/text_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="Russia" />

    </FrameLayout>

    <ImageView
        android:id="@+id/btnArrowForwardPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_40dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:paddingVertical="@dimen/size_18dp"
        app:tint="@color/background_reverse"
        android:paddingStart="@dimen/size_24dp"
        android:src="@drawable/ic_arrow_forward_24px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack" />

    <TextView
        android:id="@+id/industryEmpty"
        style="@style/text_16_hint"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_60dp"
        android:gravity="center_vertical"
        android:hint="@string/industry"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintBottom_toBottomOf="@id/btnArrowForwardIndustry"
        app:layout_constraintEnd_toStartOf="@id/btnArrowForwardIndustry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnArrowForwardIndustry" />

    <FrameLayout
        android:id="@+id/industryFilled"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_60dp"
        android:paddingVertical="@dimen/dm_12dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btnArrowForwardIndustry"
        app:layout_constraintEnd_toStartOf="@id/btnArrowForwardIndustry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnArrowForwardIndustry">

        <TextView
            android:id="@+id/hintIndustry"
            style="@style/text_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_of_work" />

        <TextView
            android:id="@+id/industry"
            style="@style/text_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            tools:text="IT" />

    </FrameLayout>

    <ImageView
        android:id="@+id/btnArrowForwardIndustry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:paddingVertical="@dimen/size_18dp"
        app:tint="@color/background_reverse"
        android:paddingStart="@dimen/size_24dp"
        android:src="@drawable/ic_arrow_forward_24px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnArrowForwardPlace" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/salaryInputLayout"
        style="@style/inputSalaryLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_60dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:hint="@string/expected_salary"
        android:textColorHint="@color/editText_text_hint"
        app:expandedHintEnabled="false"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnArrowForwardIndustry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/salaryEditText"
            style="@style/inputEditText"
            android:inputType="number"
            android:hint="@string/enter_the_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtOnlySalary"
        style="@style/text_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_44dp"
        android:text="@string/do_not_show_without_salary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/salaryInputLayout" />

    <CheckBox
        android:layout_width="@dimen/size_24dp"
        android:layout_height="@dimen/size_24dp"
        android:buttonTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="@id/txtOnlySalary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtOnlySalary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnApply"
        style="@style/text_btn_filter_16"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_60dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:text="@string/apply"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btnReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReset"
        style="@style/text_btn_filter_16"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_60dp"
        android:layout_marginBottom="@dimen/margin_24dp"
        android:background="@android:color/transparent"
        android:text="@string/reset"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
