<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context="ru.practicum.android.diploma.filter.ui.industry.FilterIndustryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="16dp">
        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_24px"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_22"
            android:text="@string/choose_industry"
            android:layout_marginStart="20dp"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp">

        <EditText
            android:id="@+id/editText"
            style="@style/editText"
            android:hint="@string/enter_industry"
            android:imeOptions="actionDone"
            android:inputType="text|textNoSuggestions"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/editTextIconSearch"
            android:layout_width="@dimen/size_Icon"
            android:layout_height="@dimen/size_Icon"
            android:layout_gravity="end|center"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_search_24px"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/clearButton"
            android:layout_width="@dimen/size_Icon"
            android:layout_height="@dimen/size_Icon"
            android:layout_gravity="end|center"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_close_24px"
            android:visibility="gone" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/industryList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        tools:listitem="@layout/industry_item"/>

    <ProgressBar
        android:id="@+id/windowProgressBar"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue"
        android:layout_marginTop="240dp"
        android:visibility="visible"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/errorPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <ImageView
            android:id="@+id/imageMessage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/image_no_internet"
            app:layout_constraintBottom_toTopOf="@id/textMessage"
            app:layout_constraintDimensionRatio="3:2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />
        <TextView
            android:id="@+id/textMessage"
            style="@style/text_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_such_vacancies"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageMessage"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
     <Button
         android:id="@+id/buttonApply"
         style="@style/blueButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/choose"
         android:layout_marginVertical="24dp"
         android:visibility="gone"/>
</LinearLayout>
