<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".favorites.ui.view.FavoritesFragment">

    <TextView
        android:id="@+id/titleFavorites"
        style="@style/text_22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/size_20dp"
        android:text="@string/favorites"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pbFavorites"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:indeterminate="false"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFavorites"
        android:layout_width="@dimen/dm_zero_dp"
        android:layout_height="@dimen/dm_zero_dp"
        android:layout_marginHorizontal="@dimen/dm_about_margin_horizontal"
        android:layout_marginVertical="@dimen/margin_8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleFavorites"
        tools:listitem="@layout/vacancy_item" />

    <LinearLayout
        android:id="@+id/llFavoritesEmptyPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dm_172dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/dm_328dp"
            android:layout_height="@dimen/dm_223dp"
            android:layout_gravity="center"
            android:background="@drawable/image_list_empty" />

        <TextView
            style="@style/placeHolderText"
            android:text="@string/the_list_is_empty" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFavoritesNothingFoundPlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dm_172dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/dm_328dp"
            android:layout_height="@dimen/dm_223dp"
            android:layout_gravity="center"
            android:background="@drawable/image_no_list_vacancy" />

        <TextView
            style="@style/placeHolderText"
            android:text="@string/unable_to_retrieve_job_listing" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
