<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/margin_16dp"
    tools:context="ru.practicum.android.diploma.search.ui.SearchFragment">

    <LinearLayout
        android:id="@+id/titlePlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btBackArrow"
            style="@style/imageButton"
            android:layout_width="@dimen/size_Icon"
            android:layout_height="@dimen/size_Icon"
            android:layout_gravity="center"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_arrow_back_24px" />

        <TextView
            android:id="@+id/selectArea"
            style="@style/text_22"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_26dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_weight="1"
            android:text="@string/select_region" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_16dp">

        <EditText
            android:id="@+id/editText"
            style="@style/editText"
            android:hint="@string/enter_region"
            android:imeOptions="actionDone"
            android:inputType="text|textNoSuggestions"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/editTextIconSearch"
            android:layout_width="@dimen/size_Icon"
            android:layout_height="@dimen/size_Icon"
            android:layout_gravity="end|center"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_search_24px"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/clearButton"
            android:layout_width="@dimen/size_Icon"
            android:layout_height="@dimen/size_Icon"
            android:layout_gravity="end|center"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_close_24px"
            android:visibility="gone" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/windowMessage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageMessage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/image_no_list_vacancy"
            app:layout_constraintBottom_toTopOf="@id/textMessage"
            app:layout_constraintDimensionRatio="3:2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textMessage"
            style="@style/text_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/there_is_no_such_region"
            android:textAlignment="center"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageMessage" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/areaList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/area_list_item" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/progress_bar_36dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue"
        android:visibility="visible" />
</LinearLayout>
